[gd_scene load_steps=3 format=3 uid="uid://dp2sbtwygdtt4"]

[ext_resource type="Script" path="res://Core/World/Indicators/ooc_indicator_component.gd" id="1_17h3m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g8pq3"]
radius = 48.0

[node name="OOCIndicatorComponent" type="Node2D"]
script = ExtResource("1_17h3m")

[node name="IndicatorLayer" type="CanvasLayer" parent="."]

[node name="IndicatorArea" type="Area2D" parent="IndicatorLayer"]
unique_name_in_owner = true
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape2D" parent="IndicatorLayer/IndicatorArea"]
shape = SubResource("CircleShape2D_g8pq3")

[node name="NinePatchRect" type="NinePatchRect" parent="IndicatorLayer/IndicatorArea"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="IndicatorSprite" type="TextureRect" parent="IndicatorLayer/IndicatorArea/NinePatchRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
expand_mode = 1
stretch_mode = 5
